[package]
name = "pod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
talk = {git = "https://github.com/Distributed-EPFL/talk"}
varcram = {git = "https://github.com/Distributed-EPFL/varcram"}
zebra = {git = "https://github.com/Distributed-EPFL/zebra"}
doomstack = { git = "https://github.com/Distributed-EPFL/doomstack" }

serde = { version = "~1.0", features = [ "derive", "rc" ] }
bincode = { version = "~1.3" }

bit-vec = { version = "0.6", features = ["serde"] }
rand = { version = "0.8.5" }

tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }
rayon = { version = "1.5.1" }
futures = { version = "0.3" }
async-trait = { version = "0.1.56" }